Fix .info-container content overflowing in certain resolutions

--- a/styles.css
+++ b/styles.css
@@ -372,9 +372,11 @@ template {
   color: #3a3a3a;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   height: 100vh;
   width: 100%;
+  /* margin-top: 100px; */
+  overflow-y: auto;
 }
 /* 
 .image-container{
@@ -388,7 +390,7 @@ template {
   width: auto;
 }  */
 
-@media (max-width: 1200px) {
+@media (max-width: 900px) {
   .image-container {
     display: none;
   }
@@ -404,6 +406,12 @@ template {
     height: 100%;
   }
   
+}
+
+@media (min-height: 990px) {
+  .body-container {
+    justify-content: center;
+  }
 }
 
 .form-container {
@@ -472,7 +480,6 @@ form {
   display: flex;
   flex-wrap: wrap;
 }
-
 
 
 input:focus {
